name:          macho-pure
version:       0.21
author:        Erik Charlebois
maintainer:    Joe Hendrix <jhendrix@galois.com>
build-type:    Simple
license:       BSD3
license-file:  LICENSE
category:      Data
cabal-Version: >= 1.6
synopsis:      This is an adaption of Erik Charlebois' Mach-O object parser to reduce partial operations.

library
  build-depends:
       base >= 4 && < 5,
       bytestring,
       binary >= 0.6.4.0,
       bimap,
       containers,
       mtl
  hs-source-dirs:  src
  exposed-modules:
    Data.MachoPure
    Data.MachoPure.Decoder
    Data.MachoPure.Types
  ghc-options: -Wall
