name:          macho-pure
version:       0.21
author:        Erik Charlebois, Joe Hendrix
maintainer:    Joe Hendrix <jhendrix@galois.com>
build-type:    Simple
license:       BSD3
license-file:  LICENSE
category:      Data
cabal-Version: >= 1.6
synopsis:      This is an adaption of Erik Charlebois' Mach-O object parser to reduce partial operations.

library
  build-depends:
       base >= 4 && < 5,
       bytestring,
       binary >= 0.6.4.0,
       containers,
       mtl,
       time,
       utf8-string,
       vector
  hs-source-dirs:  src
  exposed-modules:
    Data.Macho.Pure
    Data.Macho.Pure.Commands
    Data.Macho.Pure.Commands.Dysymtab
    Data.Macho.Pure.Commands.Section
    Data.Macho.Pure.FAT
    Data.Macho.Pure.Header
    Data.Macho.Pure.Relocations
    Data.Macho.Pure.Symbols
  other-modules:
    Data.Macho.Pure.Decoder
    Data.Macho.Pure.Internal
  ghc-options: -Wall
